# test_bot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5d32949b4e5e_.py  68e338e85c66_.py  6902477dcd82_.py  9b5ca9495bdc_.py  ae2c5f1f6206_.py
src/config/: __init__.py  loader.py  settings.py
src/database/: engine.py  models.py  uow.py
src/database/repositories/: __init__.py  base.py  cart.py  cart_item.py  category.py  order.py  oreder_item.py  product.py  user.py
src/services/: __init__.py  cart.py  category.py  order.py  product.py  user.py
src/telegram/: constants.py  filters.py  midlewares.py  state.py  states.py  texts.py  utils.py
src/telegram/handlers/: __init__.py  admin.py  cart.py  catalog.py  order.py  start.py
src/telegram/keyboards/: inline.py
tests/: conftest.py  test_cart.py  test_order.py  test_user.py
