[project]
name = "test-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "BimBimBamBam1337",email = "a94440003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "test_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
